--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           name: production-files
-          path: ./dist
+          path: ./build
   deploy:
     needs: build
     runs-on: ubuntu-latest
