--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           name: production-files
-          path: ./dist
+          path: ./build
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v3
         with:
