--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,4 @@ jobs:
         uses: actions/deploy-pages@v3
         with:
           github_token: ${{ secrets.DINO_PAGES }}
-          publish_dir: ./dist
+          publish_dir: ./build
