--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,21 +17,18 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          name: production-files
           path: ./build
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     permissions:
-      contents: read
       pages: write
       id-token: write
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
-          path: ./build
       - name: Deploy to GitHub Pages
+        id: deployment
         uses: actions/deploy-pages@v3
